docs/main.css
@import url('https://fonts.googleapis.com/css2?family=Fruktur&family=Monoton&family=Permanent+Marker&family=Poppins:wght@300;400;500;600;700;800&family=Press+Start+2P&display=swap');

*{
    margin: 0;
    padding: 0;
    /* box-sizing: border-box; */
    cursor: none;
    overflow: hidden;
}

canvas{
    position:absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    display: block;
    z-index: 0;
}

.banana-curse{
    position: absolute;
    transform:translate(-50%,-50%);
    pointer-events: none;
    /* box-shadow:  0 0px 5px 1px rgba(0, 0, 0, 0.2), 0 0.5px 5px 0 rgba(0, 0, 0, 0.08), inset 0 5px 2px 1px #0000, inset 0 -2px 3px 1px rgba(0, 0, 0, 0.1); */
    z-index: 1000;
    box-sizing: border-box;
}

.trail{
    position: absolute;
    opacity: .85;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    pointer-events: none;
    box-sizing: border-box;
    z-index: 1000;
}

#banana2{
    transition: 0.05s;
}

#banana3{
    transition: 0.1s;
}

#banana4{
    transition: 0.15s;
}

#banana5{
    transition: 0.2s;
}

#banana6{
    transition: 0.25s;
}




.body{
    width: 100vw;
    height: 100vh;
    align-content: center;
    /* align-items: space-around;
    display: grid;
    justify-content: center; */
    /* background-image: url('Assets/banana\ split\ site\ background.png split\ site\ background.png'); */
}


.showcase{
    z-index: -10;
}

.showcase nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    background-color: rgba(131, 34, 12,0.6);
    z-index: 10;
}

.showcase .name{
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    overflow: hidden;
    flex-direction: row;
    /* row-gap: 1rem; */
}

.name:hover h2{
    color: #e9c576;
    font-style: normal;
}

.showcase h2{
    font-family: oscine, sans-serif;
    font-weight: 700;
    font-style: italic;
    font-size: 1.25rem;
    color: white;
    flex-direction: column;
    text-align: center;
    margin: auto;
    transition: 300ms ease-in;

}


.showcase .banana{
    top: 50%;
    left: 50%;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 2px;
    /* margin: auto; */
    /* transform: translate(-50%, -50%); */
}

.showcase .links{
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    z-index: 1;

}

.showcase .links p{
    font-family: oscine;
    font-weight: 500;
    font-style: italic;
    margin: auto;
    color: white;
}

a{
    margin: 5px;
}

.showcase .eat{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 1;
    z-index: -100;
}

.icon{
    width: 1.5rem;
    height: 1.5rem;
    padding: 0;
    margin: 0;
    /* padding: 2px; */
    /* margin-top: 2px; */
}

.folder{
    position: absolute;
    margin: 0;
    height: 150px;
    width: 150px;
    cursor: pointer;
}

h3{
    font-family: oscine, Tahoma;
    color: white;
    text-align: center;
    margin: auto;
    text-shadow: 2px 2px #000000;
}

.border{
    border: 2px solid #e9c576;
    border-radius: 5px;
}

#process-folder{
    object-fit: none;
    right: 300px;
    top: 10rem;    
    height: auto;
    /* border-color: #e9c576; */

}

.pdf{
    height: auto;
    width: 6.5%;
}

#about{
    left: 400px;
    top: 100px;
    
}

#game{
    height: auto;
    left: 450px;
    top: 450px;
}

#why{
    right: 420px;
    top: 500px;
}

#credit{
    left: 300px;
    top: 600px;
    height: auto;
    width: 124px;
    /* height: 70.5%; */
    /* width: auto; */
}



#promo-folder{
    right: 170px;
    top: 400px;
    height: auto;
}

#mv-folder{
    top:20rem;
    left: 100px;
    height: auto;  
}

.file{
    /* position: absolute; */
    height: auto;
    width: 120px;
}


/* pertaining to all folders */

.container{
    position: absolute;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: auto;
    height: auto;
    background-color: #e9c576;
    border-radius: 10px;
    box-shadow:  0 0px 5px 1px rgba(0, 0, 0, 0.2), 0 0.5px 5px 0 rgba(0, 0, 0, 0.08), inset 0 5px 2px 1px #0000, inset 0 -2px 3px 1px rgba(0, 0, 0, 0.1);
    z-index: 4;
}

/* iterations open container */
.container .iteration-files{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    padding: 30px;
    height: 170px;
    width: 300px;
    border: 4px solid ;
    border-color:rgba(149, 120, 58, 0.9) ;
}


.nav .folder-title{
    padding: 4px;
    margin-left: 10px;
}

.nav-header{
    width: auto;
    height: auto;
    background-color:  rgba(149, 120, 58, 0.9);

}

h4{
    font-family: oscine,Tahoma;
    font-weight: 600;
    font-style: italic;
    font-size: 1rem;
    color: rgb(131, 34, 12);
    flex-direction: column;
    text-align: center;
    margin: auto;
    /* text-shadow: 2px 2px #000000; */

}

h5{
    font-family: oscine,Tahoma;
    font-weight: 600;
    font-style: normal;
    font-size: 1rem;
    color: rgb(131, 34, 12);
    flex-direction: column;
    text-align: center;
    margin: auto;
    text-shadow: 2px 2px rgba(0, 0, 0, 0.1);

}



.loading-container{
    pointer-events: none;
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin: 0, auto;
    z-index: 10;
    height: 100vh;
    width: 100vw;
    /* min-width: 55vw; */
    
    /* perspective: 200px;
	animation: perspective 3s cubic-bezier(.35,.06,.92,.03) infinite;    */
}

.loader{
    width: 70%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    /* top: 50%; */
    /* left: 50%; */
    /* transform: translate(-50%, -50%); */
}

.loader p{
    display: flex;
    flex-direction: column;
    font-family: oscine, Tahoma;
    font-weight: 700;
    font-size: 60px;
    font-style: italic;
    color: hsl(0, 0%, 100%);
    text-align: center;
    margin: auto;
    text-shadow: 2px 2px #000000;
    transform-style: preserve-3d;
    height: auto;
    width: auto;
}

#about-container > * {
    color: hsl(0, 0%, 100%);
    font-variation-settings: 'wght' var(--weight);
  }


/* music player */
.player{
    position: absolute;
    height: 400px;
    width: 300px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    background-color:  rgba(233, 197, 118, 0.9);
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.8) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    /* z-index: 100; */
}

.player .wrapper{
    border: 1px solid transparent;
    padding: 30px;
}




.nav{
    position: absolute;
    left:4px;
    top:4px; 
    padding: 3px;
    z-index: 2;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
    cursor:pointer;
}


.close{
    border-style: solid;
    border-color: rgb(131, 34, 12);
    width: 20px;
    height: 20px;
    background-color: rgb(131, 34, 12);
    text-align: center;
    margin: 0;
    border-radius: 2px;

}

.popUp{
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    /* height: 500px; */
    background-color:  #e9c576;
    box-shadow:  0 0px 5px 1px rgba(0, 0, 0, 0.2), 0 0.5px 5px 0 rgba(0, 0, 0, 0.08), inset 0 5px 2px 1px #0000, inset 0 -2px 3px 1px rgba(0, 0, 0, 0.1);
    z-index: 5;
}

.popUp h2{
    position: relative;
    font-family: lisbeth-display, sans-serif;
    font-weight: 700; 
    font-size: 100px;
    text-align: center;
}

.blueScreen{
    position:fixed;
    background-color: rgba(131, 34, 12, 0.9);
    width:100vw;
    height: 100vh;
    opacity: 75%;
    z-index: 2;
  
  }


/* toggle properties */
.hidden{
    visibility: hidden;
    width: 0;
    height: 0;
    overflow: hidden;
  }

